<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="140dp"
        android:orientation="horizontal"
        android:layout_margin="0dp">

        <ImageView
            android:id="@+id/imgCover"
            android:layout_width="100dp"
            android:layout_height="140dp"
            android:contentDescription="@string/thumbImageDescription"
            android:scaleType="fitXY"
            android:background="#9C9C9C"
            android:padding="1dp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:singleLine="true"
                android:text="Title"

                android:fontFamily="sans-serif-light"
                android:textColor="#000000"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/txtInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:lines="2"
                android:text="Info"

                android:fontFamily="sans-serif-light"
                android:textColor="#9C9C9C"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/txtDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="none"
                android:singleLine="true"
                android:text="Date"

                android:fontFamily="sans-serif-light"
                android:textColor="#AF160E"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/txtSize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="none"
                android:singleLine="true"
                android:text="Size"

                android:fontFamily="Helvetica-Bold"
                android:textColor="#AF160E"
                android:textSize="12sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="visible"
                android:orientation="horizontal"
                android:id="@+id/download_container" >

                <Button
                    android:id="@+id/btnPreview"
                    android:layout_width="wrap_content"
                    android:layout_height="28dp"
                    android:layout_margin="2dp"
                    android:text="@string/preview"
                    android:visibility="gone"

                    android:fontFamily="sans-serif-light"
                    android:textColor="#FFFFFF"
                    android:textSize="14sp"
                    android:minWidth="22dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:background="#AF160E" />

                <View
                    android:id="@+id/btnPreviewSpacer"
                    android:layout_height="match_parent"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:visibility="gone"></View>

                <Button
                    android:id="@+id/btnDownload"
                    android:layout_width="wrap_content"
                    android:layout_height="28dp"
                    android:layout_margin="2dp"
                    android:text="@string/download"

                    android:fontFamily="sans-serif-light"
                    android:textColor="#FFFFFF"
                    android:textSize="14sp"
                    android:minWidth="22dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:background="#AF160E" />
            </LinearLayout>


            <TextView
                android:id="@+id/txtProgress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:text="Progress"

                android:fontFamily="sans-serif-light"
                android:textColor="#AF160E"
                android:textSize="11sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:orientation="vertical"
                android:id="@+id/progress_ui" >

                <ProgressBar
                    android:id="@+id/prgDownload"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="match_parent"
                    android:layout_height="5dp"
                    android:indeterminate="false"
                    android:max="100"
                    android:progressDrawable="@drawable/progressbar" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:orientation="horizontal"
                android:id="@+id/actions_ui" >

                <Button
                    android:id="@+id/btnRead"
                    android:layout_width="wrap_content"
                    android:layout_height="28dp"
                    android:layout_margin="2dp"
                    android:layout_marginRight="5dp"
                    android:text="@string/read"

                    android:fontFamily="sans-serif-light"
                    android:textColor="#FFFFFF"
                    android:textSize="14sp"
                    android:minWidth="22dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:background="#AF160E" />

                <Button
                    android:id="@+id/btnArchive"
                    android:layout_width="wrap_content"
                    android:layout_height="28dp"
                    android:layout_margin="2dp"
                    android:text="@string/archive"

                    android:fontFamily="sans-serif-light"
                    android:textColor="#FFFFFF"
                    android:textSize="14sp"
                    android:minWidth="22dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:background="#AF160E"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>